# scsharp

./: .gitignore  AUTHORS  BIN.cs  Builtins.cs  CHK.cs  COPYING  ChangeLog  FreeType.cs  GRP.cs  Game.cs  GameScreen.cs  HACKING  LICENSE  MPQ.cs  Makefile  Makefile.am  NEWS  Painter.cs  README  RELEASE_README  Race.cs  SCSharp.csproj  SCSharp.sln  SMK.cs  ScoreScreen.cs  TGA.cs  UIPainter.cs  Util.cs  autogen.sh  configure  configure.ac  dump-grp.cs  dump-map.cs  font-info.c  nant.build  scsharp.exe.config  scsharp.exe.config-example
Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx
SCSharp/: Makefile  Makefile.am  SCSharp.Core.dll.csproj  SCSharp.Gui.dll.sources  SCSharp.Smk.dll.csproj  SCSharp.Smk.dll.sources  SCSharp.UI.dll.csproj  SCSharp.UI.dll.sources  SCSharp.dll.config  SCSharp.dll.csproj  SCSharp.dll.sources  Starcraft.Gui.dll.sources
SCSharp/Properties/SCSharp.Smk.dll/: AssemblyInfo.cs
SCSharp/Properties/SCSharp.UI.dll/: AssemblyInfo.cs
SCSharp/Properties/SCSharp.dll/: AssemblyInfo.cs
SCSharp/SCSharp.Gui/: Builtins.cs  ComboBoxElement.cs  ConnectionScreen.cs  CreditsScreen.cs  CursorAnimator.cs  DialogBoxElement.cs  EntryDialog.cs  Game.cs  GameMenuDialog.cs  GameModeDialog.cs  GameScreen.cs  GlobalResources.cs  GuiUtil.cs  IScriptRunner.cs  ImageElement.cs  ListBoxElement.cs  LoadSavedScreen.cs  LoginScreen.cs  MainMenu.cs  MapRenderer.cs  MarkupScreen.cs  OkCancelDialog.cs  OkDialog.cs  OptionsDialog.cs  Painter.cs  Palette.cs  Pcx.cs  PlayCustomScreen.cs  Race.cs  RaceSelectionScreen.cs  ReadyRoomScreen.cs  ScoreScreen.cs  Sprite.cs  SpriteManager.cs  SwooshPainter.cs  TextBoxElement.cs  TitleScreen.cs  UIDialog.cs  UIElement.cs  UIPainter.cs  (+1 more)
SCSharp/SCSharp.Mpq/: AssemblyInfo.cs  Bin.cs  BitStream.cs  Chk.cs  Dat.cs  FlingyDat.cs  Fnt.cs  Got.cs  Grp.cs  IScriptBin.cs  ImagesDat.cs  MapDataDat.cs  Mpq.cs  MpqArchive.cs  MpqHuffman.cs  MpqStream.cs  MpqStructs.cs  MpqWavCompression.cs  PKLibDecompress.cs  PortDataDat.cs  SfxDataDat.cs  Smk.cs  Spk.cs  SpritesDat.cs  Tbl.cs  UnitsDat.cs
SCSharp/SCSharp.Mpq.Smk/: AssemblyInfo.cs  BitStream.cs  Huffmantree.cs  SDLPCMStream.cs  Smk.cs  SmkDecoder.cs
SCSharp/SCSharp.UI/: AssemblyInfo.cs  Builtins.cs  ButtonElement.cs  Cinematic.cs  ComboBoxElement.cs  ConnectionScreen.cs  CreditsScreen.cs  CursorAnimator.cs  DialogBoxElement.cs  EntryDialog.cs  Game.cs  GameMenuDialog.cs  GameModeDialog.cs  GameScreen.cs  GlobalResources.cs  GrpButtonElement.cs  GrpElement.cs  GuiUtil.cs  IScriptRunner.cs  ImageElement.cs  LabelElement.cs  ListBoxElement.cs  LoadSavedScreen.cs  LoginScreen.cs  MainMenu.cs  MapRenderer.cs  MarkupScreen.cs  MovieElement.cs  OkCancelDialog.cs  OkDialog.cs  OptionsDialog.cs  Painter.cs  Pcx.cs  PlayCustomScreen.cs  Race.cs  RaceSelectionScreen.cs  ReadyRoomScreen.cs  ScoreScreen.cs  SmackerPlayer.cs  Sprite.cs  (+9 more)
SCSharp/SCSharp.Util/: Util.cs
SCSharp/Starcraft.Gui/: ConnectionScreen.cs  CursorAnimator.cs  GameScreen.cs  ListBoxElement.cs  LoginScreen.cs  ReadyRoomScreen.cs  Sprite.cs  SpriteManager.cs  SwooshPainter.cs  UIElement.cs  UIPainter.cs  starcraft.cs
SCSharp/Starcraft.Mpq/: Bin.cs  IScriptBin.cs
SCSharpMac/: SCSharpMac.sln
SCSharpMac/SCSharpMac.UI/: AStar.cs  Builtins.cs  ButtonElement.cs  Cinematic.cs  Game.cs  (+41 more)
Starcraft/: Makefile  Starcraft.Gui.dll.sources  Starcraft.dll.config  Starcraft.dll.sources  starcraft.exe.sources
StormLib/: Makefile  Makefile.am  Makefile.config  PostBuild.bat  SCommon.cpp  SCommon.h  SCompression.cpp  SFileCompactArchive.cpp  SFileCreateArchiveEx.cpp  SFileExtractFile.cpp  SFileFindFile.cpp  SFileOpenArchive.cpp  SFileOpenFileEx.cpp  SFileReadFile.cpp  SListFile.cpp  Storm.h  Storm.lib  StormLib.h  StormLib.sln  StormLib.vcproj  StormPort.h  StormPortLinux.cpp  StormPortMac.cpp  Test.cpp  Test.dsp  Test.vcproj  makefile  test.c
StormLib/bzlib/: Makefile  Makefile.am  bzip2.c  bzip2.def  bzip2recover.c  n-info-ltversion
StormLib/bzlib/patches/: bzip2-1.0.2.diff  bzip2-1.0.3.diff
StormLib/bzlib/res/: bunzip2-res.rc  bzcat-res.rc  bzip-dll-res.rc  bzip-dllversion.c  bzip2-res.rc  bzip2recover-res.rc
StormLib/doc/: The MoPaQ File Format.txt
StormLib/huffman/: huff.cpp  huff.h  huffman.cpp
StormLib/pklib/: explode.c  implode.c  pklib.h
StormLib/wave/: wave.cpp
Tests/: BMP.cs  Makefile  Makefile.am  TGA.cs  animate-grp.cs  dump-grp.cs  dump-iscript.cs  dump-map.cs  dump-tbl.cs  dump-tileset.cs  font-foo.cs  run-animation.cs  run-smk.cs
docs/: Makefile.am  NOTES  bin-files  cmdbtns  directory-layout  fastest-tileinfo  got-files  jungle-tileinfo  spk-file  tilesets  watercorner-tileinfo  wireframes
gui/: Game.cs  SpriteManager.cs
mpq/: IScriptBin.cs  ImagesDat.cs  SMK.cs  TBL.cs
sdldotnet/: CREDITS  INSTALL  NEWS  README  SdlDotNet.FxCop  SdlDotNet.build  SdlDotNet.cmbx  SdlDotNet.sln  TODO  prebuild.xml
sdldotnet-bin/: Tao.Sdl.dll.config
src/: AssemblyInfo.cs  Makefile  Makefile.am  SCSharp.sln  mono.sh  scsharp.cs  scsharp.exe.config  scsharp.exe.config-example  scsharp.exe.sources  starcraft.cs  starcraft.exe.config  starcraft.exe.config-example  starcraft.exe.sources
src/SCSharp.Mpq/: BitStream.cs  Fnt.cs  Got.cs  MapDataDat.cs  MpqArchive.cs  MpqHuffman.cs  MpqStream.cs  MpqStructs.cs  MpqWavCompression.cs  PKLibDecompress.cs  SCSharp.Mpq.csproj  Spk.cs
src/SCSharp.Mpq.Smk/: BitStream.cs  Huffmantree.cs  Smk.cs
src/SCSharp.UI/: AStar.cs  App.config  ButtonElement.cs  ComboBoxElement.cs  ConnectionScreen.cs  CreditsScreen.cs  CursorAnimator.cs  DialogBoxElement.cs  EntryDialog.cs  GameMenuDialog.cs  GameModeDialog.cs  GrpElement.cs  GuiUtil.cs  ImageElement.cs  LabelElement.cs  LoadSavedScreen.cs  MainMenu.cs  MapRenderer.cs  MarkupScreen.cs  MovieElement.cs  OkCancelDialog.cs  Pcx.cs  SCSharp.UI.csproj  ScoreScreen.cs  SmackerPlayer.cs  SwooshPainter.cs  TextBoxElement.cs  TitleScreen.cs  UIDialog.cs  UIScreen.cs  scsharp.cs
src/SCSharp.Util/: Palette.cs  SCSharp.Util.csproj
tests/: animate-grp.cs  dump-tileset.cs  run-smk.cs
tools/: Makefile.am  brute.cs  extract.cs  list.txt  lsmpq.cs
(+2365 files in other folders)
