
noinst_LTLIBRARIES=libStorm.la

libStorm_la_SOURCES= \
	GfxDecode.cpp \
	SCommon.cpp \
	SCompression.cpp \
	SFileCompactArchive.cpp \
	SFileCreateArchiveEx.cpp \
	SFileExtractFile.cpp \
	SFileFindFile.cpp \
	SFileOpenArchive.cpp \
	SFileOpenFileEx.cpp \
	SFileReadFile.cpp \
	SListFile.cpp \
	StormPortLinux.cpp \
	wave/wave.cpp \
	huffman/huffman.cpp
	pklib/implode.c \
	pklib/explode.c \
	pklib/crc32.c
	SCommon.h \
	Storm.h \
	StormLib.h \
	StormPort.h \
	huffman/huff.h \
	huffman/huffman.h \
	pklib/pklib.h \
	wave/wave.h
